opam-version: "2.0"
name: "satysfi-ncsq-doc"
version: "0.0.1"
synopsis: "SATySFi package for drawing rectangular diagrams"
description: """
Non-Commutative Squares (NCSq) is a SATySFi package for drawing rectangular diagrams.
This package provides documentation for the package.

This requires Satyrographos to install. See https://github.com/na4zagin3/satyrographos.
"""
maintainer: "Taichi Uemura <t.uemura00@gmail.com>"
authors: "Taichi Uemura <t.uemura00@gmail.com>"
license: "MIT"
homepage: "https://github.com/uemurax/satysfi-ncsq"
bug-reports: "https://github.com/uemurax/satysfi-ncsq/issues"
dev-repo: "git+https://github.com/uemurax/satysfi-ncsq.git"
depends: [
  "satysfi" {>= "0.0.5" & "< 0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist" {>= "0.0.5" & "< 0.0.6"}
  "satysfi-ncsq" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "ncsq-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"
  ]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "ncsq-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"
  ]
]
